--- a/code/ebay-clone/package.json
+++ b/code/ebay-clone/package.json
@@ -8,10 +8,27 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
+    "@stripe/stripe-js": "^3.0.0",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.39.3",
+    "debounce": "^2.0.0",
+    "moment": "^2.30.1",
+    "next": "14.1.0",
+    "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-icons": "^5.0.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^10.0.4",
+    "stripe": "^14.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
